<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="timetracker.com.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textViewWorkAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:text="@string/work_address"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutInput"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutInput"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <LinearLayout
        android:id="@+id/linearLayoutInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textViewError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWorkAddress">

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="287dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:tooltipText="@string/address"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_address"
            tools:layout_editor_absoluteX="290dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text=""
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutInput" />

    <LinearLayout
        android:id="@+id/linearLayoutValidating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutInput">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/validating_address" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
