<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutBG"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="3px"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:background="@android:color/black"
        android:orientation="vertical"></LinearLayout>
    <TextView
        android:id="@+id/textViewId"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingHorizontal="5dp"
        android:text="" />

    <LinearLayout
        android:layout_width="3px"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:background="@android:color/black"
        android:orientation="vertical"></LinearLayout>

    <TextView
        android:id="@+id/textViewCheckIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingHorizontal="5dp"
        android:text="@string/checkin" />

    <LinearLayout
        android:layout_width="3px"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:background="@android:color/black"
        android:orientation="vertical"></LinearLayout>

    <TextView
        android:id="@+id/textViewCheckOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingHorizontal="5dp"
        android:text="@string/checkout" />

    <LinearLayout
        android:layout_width="3px"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:background="@android:color/black"
        android:orientation="vertical"></LinearLayout>

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingHorizontal="5dp"
        android:text="@string/total_spent" />
    <LinearLayout
        android:layout_width="3px"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:background="@android:color/black"
        android:orientation="vertical"></LinearLayout>
</LinearLayout>
